--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&family=Work+Sans&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
   box-sizing: border-box;
