--- a/src/components/weatherCard/WeatherCard.css
+++ b/src/components/weatherCard/WeatherCard.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 150px;
-  padding: 20px;
+  padding: 20px 15px 20px 15px;
   border-radius: 15px;
   box-shadow: 0px 0px 15px -5px rgba(0, 0, 0, 0.75);
   color: #3859c5;
@@ -14,7 +14,6 @@
 
 .card-container p {
   color: white;
-  padding: 5px 0 5px 0;
 }
 
 .icon-container {
@@ -25,7 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .card-icon {
@@ -35,7 +34,13 @@
 }
 
 .card-data {
+  font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
+  font-weight: bold;
+  padding: 5px 0 5px 0;
 }
+
 .card-description {
+  font-size: 1rem;
+  padding: 0 0 5px 0;
 }
