--- a/src/components/weatherCard/WeatherCard.css
+++ b/src/components/weatherCard/WeatherCard.css
@@ -37,7 +37,14 @@
   font-family: "Roboto", sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
-  padding: 5px 0 5px 0;
+  margin: 5px 0 5px 0;
+  /* border: 1px solid red; */
+}
+
+.card-data span {
+  font-size: 0.9rem;
+  padding-left: 0.1rem;
+  letter-spacing: 0.5px;
 }
 
 .card-description {
