--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -1,4 +1,6 @@
-.container {
+.forecast-container {
   width: 100%;
   height: 400px;
+  border: 1px solid rgb(131, 131, 131);
+  padding: 20px 0 20px 0;
 }
