--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -1,6 +1,50 @@
 .forecast-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 95%;
+  border-radius: 25px;
+  box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.5);
+  padding: 20px 0 20px 0;
+}
+
+.forecast-btns-container {
+  width: 80%;
+  padding: 15px 15px 0px 15px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.forecast-btns-container button {
+  font-size: 1rem;
+  font-weight: 600;
+  color: rgb(187, 187, 187);
+  outline: none;
+  cursor: pointer;
+  background: transparent;
+  padding: 15px 40px;
+  border-radius: 20px;
+  border: none;
+  transition: all 0.3s linear;
+}
+
+.forecast-btns-container button:hover {
+  box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
+}
+
+.forecast-btns-container button:active,
+.forecast-btns-container button:focus {
+  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.18);
+}
+
+.forecast-btns-container .active-btn {
+  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.18);
+  color: rgb(82, 82, 173);
+}
+
+.forecast-graph-container {
   width: 100%;
   height: 400px;
-  border: 1px solid rgb(131, 131, 131);
-  padding: 20px 0 20px 0;
 }
