--- a/src/components/weatherExtra/WeatherExtra.css
+++ b/src/components/weatherExtra/WeatherExtra.css
@@ -1,6 +1,7 @@
 .weather-extra-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 1rem 0 1rem 0;
+  width: 95%;
 }
