--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,8 +7,10 @@ h1 {
   align-items: center;
   justify-content: center;
   width: 95%;
+  margin: 1rem 0 1rem 0;
   /* TEST NOT KEEPING */
-  min-height: 16rem;
+  min-height: 7rem;
+  max-height: 16rem;
 }
 
 .location {
