Improve styles across whole page

--- a/src/components/search/Search.css
+++ b/src/components/search/Search.css
@@ -37,7 +37,7 @@
 }
 
 input[type="text"] {
-  background-color: rgb(250, 250, 251);
+  background-color: transparent;
   font-size: 2.5rem;
   height: 2.5rem;
   display: inline-block;
