--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,12 @@ body {
   background-color: rgb(250, 250, 251);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(
+    to top,
+    #f3e7e9 0%,
+    #e3eeff 99%,
+    #e3eeff 100%
+  );
 }
 
 code {
