--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -7,6 +7,7 @@
   border-radius: 25px;
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.5);
   padding: 20px 0 20px 0;
+  min-height: 464px;
 }
 
 .forecast-btns-container {
@@ -20,7 +21,7 @@
 .forecast-btns-container button {
   font-size: 1rem;
   font-weight: 600;
-  color: rgb(187, 187, 187);
+  color: rgb(170, 170, 170);
   outline: none;
   cursor: pointer;
   background: transparent;
@@ -32,6 +33,7 @@
 
 .forecast-btns-container button:hover {
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
+  color: rgb(130, 130, 130);
 }
 
 .forecast-btns-container button:active,
@@ -39,7 +41,7 @@
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.18);
 }
 
-.forecast-btns-container .active-btn {
+.forecast-btns-container button.active-btn {
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.18);
   color: rgb(82, 82, 173);
 }
