--- a/src/components/forecast/Forecast.css
+++ b/src/components/forecast/Forecast.css
@@ -1,4 +1,5 @@
 .forecast-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,6 +9,25 @@
   box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.5);
   padding: 20px 0 20px 0;
   min-height: 464px;
+  transition: all 0.3s ease-in-out;
+}
+
+.forecast-container::after {
+  content: "";
+  border-radius: 25px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  box-shadow: 0px 0px 12px -5px rgba(82, 82, 173);
+}
+
+.forecast-container:hover::after {
+  opacity: 1;
 }
 
 .forecast-btns-container {
@@ -43,7 +63,7 @@
 
 .forecast-btns-container button.active-btn {
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.18);
-  color: rgb(82, 82, 173);
+  color: rgb(65, 65, 139);
 }
 
 .forecast-graph-container {
