Add Hazy Weather icon

--- a/src/components/weatherIcons/WeatherIcons.css
+++ b/src/components/weatherIcons/WeatherIcons.css
@@ -224,6 +224,50 @@
   animation: spin 16s linear infinite reverse;
 }
 
+.haze {
+  position: absolute;
+  z-index: 2;
+  top: 160%;
+  left: 0%;
+  margin: 0.375em 0 0 -2em;
+  background: transparent;
+  border-radius: 10px;
+  height: 25px;
+  width: 600px;
+  box-shadow: 0 55px 0 0 #d4d4d4;
+  animation: haze 15s linear infinite;
+}
+
+.haze::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: 0%;
+  left: 50%;
+  margin: 0.375em 0 0 -2em;
+  background: transparent;
+  border-radius: 10px;
+  height: 25px;
+  width: 550px;
+  box-shadow: 0 55px 0 0 #d4d4d4;
+  animation: haze 15s linear infinite alternate-reverse;
+}
+
+.haze::before {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: 150%;
+  left: 25%;
+  margin: 0.375em 0 0 -2em;
+  background: transparent;
+  border-radius: 10px;
+  height: 25px;
+  width: 600px;
+  box-shadow: 0 55px 0 0 #d4d4d4;
+  animation: haze 15s linear infinite;
+}
+
 /* Animations */
 
 @keyframes spin {
@@ -285,5 +329,24 @@
     color: #fff;
     background: #fff;
     opacity: 0.2;
+  }
+}
+
+@keyframes haze {
+  0% {
+    opacity: 0.1;
+    transform: translateX(50px);
+  }
+  25% {
+    opacity: 0.75;
+  }
+  50% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 0.1;
   }
 }
